parse/internal/parser/testdata/failing/union-rem-after-fail.trunnel
struct rem_after_fail {
    u8 tag;
    union addr[tag] {
       4 : fail; u8 rem[];
    };
}
